# sosec-agentic-fw

./: README.md  README_local_backup.md  pyproject.toml
agents/: .gitignore  topic_checker_agent.py
agents/keyword_related_agents/: keyword_extractor_agent.py
agents/sosec_categories_agents/: base_agent.py  conspiracy_theories_agent.py  general_concerns_agent.py  political_parties_agent.py  simple.py  sosec_classification_step.py  sosec_orchestrator_agent.py  trust_institutions_agent.py  views_germany_usa_agent.py
data/.ipynb_checkpoints/: start_data_isr-checkpoint.csv
data/isr_events/: 1741700529.2996204_Israel.parquet  1741700529.6301675_Gaza_Strip.parquet  1741700530.2381394_Palestine_(region).parquet  1741700530.8553123_Hezbollah.parquet  1741700532.7572072_Hostage.parquet
isr_oct_analysis/data/: post_isr_result.csv
isr_oct_analysis/data/isr_events/: 1741700529.9282677_Hamas.parquet  1741700530.565143_Lebanon.parquet  1741700531.1293623_Iran.parquet  1741700531.4469137_Benjamin_Netanyahu.parquet  1741700531.8962471_Rafah.parquet  1741700532.2072368_Aga_Khan_IV.parquet  1741700532.4837487_International_Criminal_Court.parquet
notebooks/: classification_isr.ipynb
notebooks/.ipynb_checkpoints/: classification_isr-checkpoint.ipynb  visualisation_isr_oct-checkpoint.ipynb
